--- a/templates/core/landing.html
+++ b/templates/core/landing.html
@@ -256,7 +256,7 @@
             </a>
           </div>
           <div class="text-center">
-            <img src="https://i.ibb.co/nqNGqpFc/mits-logo.png" alt="MITS Gwalior" class="w-48 h-48 mx-auto object-contain" />
+            <img src="{% static 'img/mits-logo.png' %}" alt="MITS Gwalior" class="w-48 h-48 mx-auto object-contain" />
           </div>
         </div>
       </div>
