--- a/templates/emails/file_shared.html
+++ b/templates/emails/file_shared.html
@@ -51,7 +51,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://i.ibb.co/nqNGqpFc/mits-logo.png" alt="MITS Gwalior" class="logo">
+            <img src="{% static 'img/mits-logo.png' %}" alt="MITS Gwalior" class="logo">
             <h1 class="title">MITS Cloud</h1>
             <p class="subtitle">File Sharing Notification</p>
         </div>
